2005-10-25  Alexander V. Lukyanov <lav@yars.free.net>

	* bookmarks.cc: (hide_password) move to url.
	* url.cc, url.h: (hide_password) move here; (remove_password) new
	  function.
	* CmdExec.cc: use squeeze_file_name when showing cd status.
	* misc.cc: (squeeze_file_name) use url::remove_password.
	* buffer.cc, buffer_ssl.cc: don't return MOVED if we had eof already -
	  this fixes a rare spinning.

2005-10-20  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: add workaround for proftpd resetting data connection
	  when there is no files for NLST.

2005-10-19  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, Http.cc: check ReconnectAllowed() after host name
	  resolving.

2005-10-18  Alexander V. Lukyanov <lav@yars.free.net>

	* misc.cc: (get_lftp_home) return NULL if LFTP_HOME is empty.
	* history.cc, bookmark.cc, lftp_rl.c: don't read/write anything to
	  user-specific files if get_lftp_home returns NULL.
	* FileAccess.cc: swap default SameSiteAs and SameLocationAs, this
	  fixes loop in `open file:/path'.
	* SMTask.cc: (CollectGarbage) don't protect scan->next if it is NULL.

2005-10-18  Alexander V. Lukyanov <lav@yars.free.net>

	* SMTask.cc, SMTask.h: do delete the task in Delete if not running;
	  (CollectGarbage) protect next element in chain when deleting one task.
	* Job.cc: (BuryDoneJobs) avoid looping caused by Delete not
	  always deleting the task.
	* misc.cc, misc.h: (get_lftp_home) new function.
	* bookmark.cc, commands.cc, history.cc, import-ncftp, import-netscape,
	  lftp.cc, lftp_rl.c: use it (based on patch by Nikolai Weibull
	  <mailing-lists.lftp-development@rawuncut.elitemail.org>).

2005-10-17  Alexander V. Lukyanov <lav@yars.free.net>

	* SMTask.cc, SMTask.h: simplify Schedule; make garbage collection
	  a separate function; don't delete the task in Delete, just mark
	  it for GC.
	* ProcWait.cc: don't rely on Delete to delete the task, just mark
	  it for deletion.
